mais opções para exportar dados

--- a/administracao/templates/administracao/carregar.html
+++ b/administracao/templates/administracao/carregar.html
@@ -8,13 +8,13 @@
 {% load linguas %}
 
 {% block content %}
-  <a href="{% url 'carrega_arquivo' 'disciplinas' %}"><h5>
+  <a href="{% url 'carrega_arquivo' 'Disciplinas' %}"><h5>
     {% lng "disciplinas" "courses" %}
   </h5></a>
-  <a href="{% url 'carrega_arquivo' 'estudantes' %}"><h5>
+  <a href="{% url 'carrega_arquivo' 'Estudantes' %}"><h5>
     {% lng "estudantes" "students" %}
   </h5></a>
-  <a href="{% url 'carrega_arquivo' 'avaliacoes' %}"><h5>
+  <a href="{% url 'carrega_arquivo' 'Avaliações' %}"><h5>
     {% lng "avaliações" "evaluations" %}
   </h5></a>
   <br><br>
