suporte a exportar tabelas com JSON

--- a/projetos/templates/projetos/comite.html
+++ b/projetos/templates/projetos/comite.html
@@ -31,7 +31,7 @@
 
   <script>
     function carrega_pagina(){
-      {% include "tabelas_scripts.html" with tabela='Membros' %}
+      {% include "tabelas_scripts.html" with tabela="Membros" %}
     }
     window.onload = carrega_pagina
   </script>
