--- a/projetos/templates/projetos/projetos_lista_completa.html
+++ b/projetos/templates/projetos/projetos_lista_completa.html
@@ -14,17 +14,19 @@
 {% load linguas %}
 {% load exibe_notas %}
 {% load propostas %}
+{% load get_item %}
+{% load alocacao %}
 
 {% block head %}
   {% include "tabelas_includes.html" %}
 {% endblock %}
 
 {% block content %}
-  {% include "edicoes.html" with com_cursos=True com_externos=True avancados=True %}
+  {% include "edicoes.html" %}
   <div id="atualizar">
     {% include "tabelas_top_ml.html" with tabela="Projetos" cabecalhos=cabecalhos %}
       {% for projeto in projetos %}
-        {% with alocacoes=projeto.alocacao_set.all %}
+        {% with alocacoes=projeto|alocacoes_insper %}
           {% if alocacoes.count > 0 %}
             <tr class="item">
               <th scope="row" data-order="{{projeto.get_titulo}}">{% include "projetos/includes/bloco_projeto.html" with esconde_tipo=True projeto=projeto tit_proposta=False %}</th>
@@ -36,164 +38,53 @@
               <td>{{alocacoes|length}}</td>
               <td>{% for area in projeto.proposta.areadeinteresse_set.all %}{% if area.outras %}({{ area.outras }}){% else %}{% lng area.area.titulo area.area.titulo_en %}{% endif %}{% if not forloop.last %}; {% endif %}{% endfor %}</td>
 
-
               <td style="text-align: right;">{% with val=alocacoes|media_crs %}<span lang="pt">{% language "pt-br" %}{{val.0|floatformat:2}}{% endlanguage %}</span><span lang="en" style="display:none">{% language "en" %}{{val.0|floatformat:2}}{% endlanguage %}</span>&plusmn;<span lang="pt">{% language "pt-br" %}{{val.1|floatformat:2}}{% endlanguage %}</span><span lang="en" style="display:none">{% language "en" %}{{val.1|floatformat:2}}{% endlanguage %}</span>{% endwith %}</td>
 
               {% with alocacao=alocacoes.0 %}
-
-                <td>{{alocacao.id}}</td>
-
-                <td>{{alocacao.aluno.curso2}}</td>
-
-                <td>
-                  <span lang="pt">{% language "pt-br" %}{{alocacao.aluno.cr}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{alocacao.aluno.cr}}{% endlanguage %}</span>
-                </td>
-
-                <td>{% if alocacao %}{{projeto.proposta|opcao_alocacao:alocacao}}{% endif %}</td>
-
+                {% comment %} Só para pegar as notas só de grupo {% endcomment %}
                 {% with media=alocacao|get_media_alocacao %}
-                <td> {% comment %} <!-- Individual --> {% endcomment %}
-                  <span lang="pt">{% language "pt-br" %}{{ media.individual|floatformat:2}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{ media.individual|floatformat:2}}{% endlanguage %}</span>
-                </td>
-
                 <td> {% comment %} <!-- Grupo --> {% endcomment %}
-                  <span lang="pt">{% language "pt-br" %}{{ media.media|floatformat:"2"}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{ media.media|floatformat:"2"}}{% endlanguage %}</span>
-                </td> 
+                  <span lang="pt">{% language "pt-br" %}{{ media.media_grupo|floatformat:2}}{% endlanguage %}</span>
+                  <span lang="en" style="display:none">{% language "en" %}{{ media.media_grupo|floatformat:2}}{% endlanguage %}</span>
+                </td>
                 {% endwith %}
-
-                <td>{% for area in alocacao.aluno.user.areadeinteresse_set.all %}{% if area.outras %}({{ area.outras }}){% else %}{% lng area.area.titulo area.area.titulo_en %}{% endif %}{% if not forloop.last %}; {% endif %}{% endfor %}</td>
-                
-                <td>{% if alocacao.aluno.trabalhou %}{{alocacao.aluno.trabalhou}}{% endif %}</td>
-                <td>{% if alocacao.aluno.atividades %}{{alocacao.aluno.atividades}}{% endif %}</td>
-
               {% endwith %}
 
-              {% with alocacao=alocacoes.1 %}
+              {% for i in "01234" %}
+                  
+                {% with alocacao=alocacoes|get_item:i %}
 
-                <td>{{alocacao.id}}</td>
+                  <td>{{alocacao.id}}</td>
 
-                <td>{{alocacao.aluno.curso2}}</td>
-                <td>
-                  <span lang="pt">{% language "pt-br" %}{{alocacao.aluno.cr}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{alocacao.aluno.cr}}{% endlanguage %}</span>
-                </td>
+                  <td>{{alocacao.aluno.curso2}}</td>
 
-                <td>{% if alocacao %}{{projeto.proposta|opcao_alocacao:alocacao}}{% endif %}</td>
+                  <td>
+                    <span lang="pt">{% language "pt-br" %}{{alocacao.aluno.cr}}{% endlanguage %}</span>
+                    <span lang="en" style="display:none">{% language "en" %}{{alocacao.aluno.cr}}{% endlanguage %}</span>
+                  </td>
 
-                {% with media=alocacao|get_media_alocacao %}
-                <td> {% comment %} <!-- Individual --> {% endcomment %}
-                  <span lang="pt">{% language "pt-br" %}{{ media.individual|floatformat:2}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{ media.individual|floatformat:2}}{% endlanguage %}</span>
-                </td>
+                  <td>{% if alocacao %}{{projeto.proposta|opcao_alocacao:alocacao}}{% endif %}</td>
 
-                <td> {% comment %} <!-- Grupo --> {% endcomment %}
-                  <span lang="pt">{% language "pt-br" %}{{ media.media|floatformat:"2"}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{ media.media|floatformat:"2"}}{% endlanguage %}</span>
-                </td> 
+                  {% with media=alocacao|get_media_alocacao %}
+                  <td> {% comment %} <!-- Individual --> {% endcomment %}
+                    <span lang="pt">{% language "pt-br" %}{{ media.individual|floatformat:2}}{% endlanguage %}</span>
+                    <span lang="en" style="display:none">{% language "en" %}{{ media.individual|floatformat:2}}{% endlanguage %}</span>
+                  </td>
+
+                  <td> {% comment %} <!-- Final --> {% endcomment %}
+                    <span lang="pt">{% language "pt-br" %}{{ media.media|floatformat:"2"}}{% endlanguage %}</span>
+                    <span lang="en" style="display:none">{% language "en" %}{{ media.media|floatformat:"2"}}{% endlanguage %}</span>
+                  </td> 
+                  {% endwith %}
+
+                  <td>{% for area in alocacao.aluno.user.areadeinteresse_set.all %}{% if area.outras %}({{ area.outras }}){% else %}{% lng area.area.titulo area.area.titulo_en %}{% endif %}{% if not forloop.last %}; {% endif %}{% endfor %}</td>
+                  
+                  <td>{% if alocacao.aluno.trabalhou %}{{alocacao.aluno.trabalhou}}{% endif %}</td>
+                  <td>{% if alocacao.aluno.atividades %}{{alocacao.aluno.atividades}}{% endif %}</td>
+
                 {% endwith %}
 
-                <td>{% for area in alocacao.aluno.user.areadeinteresse_set.all %}{% if area.outras %}({{ area.outras }}){% else %}{% lng area.area.titulo area.area.titulo_en %}{% endif %}{% if not forloop.last %}; {% endif %}{% endfor %}</td>
-
-                <td>{% if alocacao.aluno.trabalhou %}{{alocacao.aluno.trabalhou}}{% endif %}</td>
-                <td>{% if alocacao.aluno.atividades %}{{alocacao.aluno.atividades}}{% endif %}</td>
-
-              {% endwith %}
-
-              {% with alocacao=alocacoes.2 %}
-
-                <td>{{alocacao.id}}</td>
-
-                <td>{{alocacao.aluno.curso2}}</td>
-                <td>
-                  <span lang="pt">{% language "pt-br" %}{{alocacao.aluno.cr}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{alocacao.aluno.cr}}{% endlanguage %}</span>
-                </td>
-
-                <td>{% if alocacao %}{{projeto.proposta|opcao_alocacao:alocacao}}{% endif %}</td>
-
-                {% with media=alocacao|get_media_alocacao %}
-                <td> {% comment %} <!-- Individual --> {% endcomment %}
-                  <span lang="pt">{% language "pt-br" %}{{ media.individual|floatformat:2}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{ media.individual|floatformat:2}}{% endlanguage %}</span>
-                </td>
-
-                <td> {% comment %} <!-- Grupo --> {% endcomment %}
-                  <span lang="pt">{% language "pt-br" %}{{ media.media|floatformat:"2"}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{ media.media|floatformat:"2"}}{% endlanguage %}</span>
-                </td> 
-                {% endwith %}
-
-                <td>{% for area in alocacao.aluno.user.areadeinteresse_set.all %}{% if area.outras %}({{ area.outras }}){% else %}{% lng area.area.titulo area.area.titulo_en %}{% endif %}{% if not forloop.last %}; {% endif %}{% endfor %}</td>
-
-                <td>{% if alocacao.aluno.trabalhou %}{{alocacao.aluno.trabalhou}}{% endif %}</td>
-                <td>{% if alocacao.aluno.atividades %}{{alocacao.aluno.atividades}}{% endif %}</td>
-
-              {% endwith %}
-
-              {% with alocacao=alocacoes.3 %}
-
-                <td>{{alocacao.id}}</td>
-
-                <td>{{alocacao.aluno.curso2}}</td>
-                <td>
-                  <span lang="pt">{% language "pt-br" %}{{alocacao.aluno.cr}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{alocacao.aluno.cr}}{% endlanguage %}</span>
-                </td>
-
-                <td>{% if alocacao %}{{projeto.proposta|opcao_alocacao:alocacao}}{% endif %}</td>
-
-                {% with media=alocacao|get_media_alocacao %}
-                <td> {% comment %} <!-- Individual --> {% endcomment %}
-                  <span lang="pt">{% language "pt-br" %}{{ media.individual|floatformat:2}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{ media.individual|floatformat:2}}{% endlanguage %}</span>
-                </td>
-
-                <td> {% comment %} <!-- Grupo --> {% endcomment %}
-                  <span lang="pt">{% language "pt-br" %}{{ media.media|floatformat:"2"}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{ media.media|floatformat:"2"}}{% endlanguage %}</span>
-                </td> 
-                {% endwith %}
-
-                <td>{% for area in alocacao.aluno.user.areadeinteresse_set.all %}{% if area.outras %}({{ area.outras }}){% else %}{% lng area.area.titulo area.area.titulo_en %}{% endif %}{% if not forloop.last %}; {% endif %}{% endfor %}</td>
-
-                <td>{% if alocacao.aluno.trabalhou %}{{alocacao.aluno.trabalhou}}{% endif %}</td>
-                <td>{% if alocacao.aluno.atividades %}{{alocacao.aluno.atividades}}{% endif %}</td>
-
-              {% endwith %}
-
-              {% with alocacao=alocacoes.4 %}
-
-                <td>{{alocacao.id}}</td>
-
-                <td>{{alocacao.aluno.curso2}}</td>
-                <td>
-                  <span lang="pt">{% language "pt-br" %}{{alocacao.aluno.cr}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{alocacao.aluno.cr}}{% endlanguage %}</span>
-                </td>
-
-                <td>{% if alocacao %}{{projeto.proposta|opcao_alocacao:alocacao}}{% endif %}</td>
-
-                {% with media=alocacao|get_media_alocacao %}
-                <td> {% comment %} <!-- Individual --> {% endcomment %}
-                  <span lang="pt">{% language "pt-br" %}{{ media.individual|floatformat:2}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{ media.individual|floatformat:2}}{% endlanguage %}</span>
-                </td>
-
-                <td> {% comment %} <!-- Grupo --> {% endcomment %}
-                  <span lang="pt">{% language "pt-br" %}{{ media.media|floatformat:"2"}}{% endlanguage %}</span>
-                  <span lang="en" style="display:none">{% language "en" %}{{ media.media|floatformat:"2"}}{% endlanguage %}</span>
-                </td> 
-                {% endwith %}
-
-                <td>{% for area in alocacao.aluno.user.areadeinteresse_set.all %}{% if area.outras %}({{ area.outras }}){% else %}{% lng area.area.titulo area.area.titulo_en %}{% endif %}{% if not forloop.last %}; {% endif %}{% endfor %}</td>
-
-                <td>{% if alocacao.aluno.trabalhou %}{{alocacao.aluno.trabalhou}}{% endif %}</td>
-                <td>{% if alocacao.aluno.atividades %}{{alocacao.aluno.atividades}}{% endif %}</td>
-
-              {% endwith %}
+              {% endfor %}
 
             </tr>
           {% endif %}
