--- a/professores/templates/professores/dinamicas_view.html
+++ b/professores/templates/professores/dinamicas_view.html
@@ -249,7 +249,7 @@
         {% endif %}
       </button>
       {% if encontro %}
-        <button id="excluir" class="btn btn-primary mb-1" type="submit" name="excluir" onclick="operacao = 'excluir';">
+        <button id="excluir" class="btn btn-warning mb-1" type="submit" name="excluir" onclick="operacao = 'excluir';">
           {% lng "Excluir Mentoria" "Delete Mentoring" %}
         </button>
       {% endif %}
